add banner to homepage

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,4 +47,11 @@ body {
   }
 }
 
-
+.jumbotron {
+  background: url('bannercloud.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  h1, h2, h3 {
+    font-family: guardian-egyptt, georgia, serif;
+  }
+}
