--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,10 @@
+<div class="jumbotron">
+  <div class="container">
+    <h2>The Largest, Newest Book Collection.</h2>
+    <h3>Join Now</h3>
+  </div>
+</div>
+
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
