change link for banner image to use dropbox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,7 +48,7 @@ body {
 }
 
 .jumbotron {
-  background: url('bannercloud.png');
+  background: url('https://dl.dropboxusercontent.com/s/71lyjtj5kjqrh6h/bannercloud.png?dl=0');
   background-repeat: no-repeat;
   background-size: cover;
   h1, h2, h3 {
