--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,7 +10,7 @@
     <p><%= @listing.description %></p>
     <br>
     <div class="right">
-      <%= link_to "Buy Now", new_listing_order_path(@listing), class: "btn btn-primary", style: 'color:#FFFFFF;' %>
+      <%= link_to "Buy Now", new_listing_order_path(@listing), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
